# YouTube_QA_RAG_AI

./: README.md  pyproject.toml
frontend/: firebase.ts  package.json
frontend/app/: globals.css  page.tsx
frontend/app/components/: Stage.tsx
