[tool.poetry]
name = "youtube-qa-rag-ai"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pylance = "~0.18.2"
lancedb = "~0.14"
langchain-community = "^0.3.14"
webvtt-py = "^0.5.1"
openai-whisper = "^20240930"
fastapi = "^0.115.6"
youtube-dl = "^2021.12.17"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
